add module opener